--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 		<!-- <div class="titulo">
 			<span><i>Cantidad de vidas: </i> 3</span>
 		</div> -->
-		<div class="gameboard">
-			<div id="celeste" class="color celeste left" data-color="celeste"></div>
-			<div id="violeta" class="color violeta right" data-color="violeta"></div>
-			<div id="naranja" class="color naranja left" data-color="naranja"></div>
-			<div id="verde" class="color verde right" data-color="verde"></div>
-			<button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">
-				<a>Empezar a jugar!</a>
-			</button>
+
+			<div class="gameboard">
+				<div id="celeste" class="color celeste left" data-color="celeste"></div>
+				<div id="violeta" class="color violeta right" data-color="violeta"></div>
+				<div id="naranja" class="color naranja left" data-color="naranja"></div>
+				<div id="verde" class="color verde right" data-color="verde"></div>
+				<button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">
+					<a>Empezar a jugar!</a>
+				</button>
+			</div>
 		</div>
+
 		<!-- <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">
 			<a href="#">Empezar a jugar!</a>
 		</button> -->
